@@ -71,14 +71,13 @@ public class SecurityConfig {
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                         CorsConfiguration config = new CorsConfiguration();
 
-//                        config.setAllowedOrigins(List.of("http://localhjost:3000"));
-                        config.setAllowedOriginPatterns(Collections.singletonList("*"));
+                        config.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8081"));
                         config.setAllowedMethods(Collections.singletonList("*"));
-                        config.setAllowCredentials(true);
                         config.setAllowedHeaders(Collections.singletonList("*"));
+                        config.setExposedHeaders(List.of("access", "Set-Cookie"));
+                        config.setAllowCredentials(true);
                         config.setMaxAge(3600L);
 
-                        config.setExposedHeaders(List.of("access", "Set-Cookie"));
 
                         return config;
                     }
@@ -99,9 +98,11 @@ public class SecurityConfig {
                 .requestMatchers("/auth/signin", "/auth/signup", "/auth/reissue","/auth/find-password", "/auth/verify/**" ).permitAll()
                 .requestMatchers("/oauth2/authorization/**", "/auth/oauth2/**").permitAll()
                 // 스웨거 라우팅
-                .requestMatchers("/swagger-ui.html").permitAll()
+                .requestMatchers("/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
                 // 중복검사 라우팅
                 .requestMatchers("/api/exist/**").permitAll()
+                //OpenVidu WebHook
+                .requestMatchers("/conference/webhook").permitAll()
                 // 위 경로 외 경로는 로그인을 필요로 함
                 .anyRequest().authenticated()
         );
